2006-06-29 aurel
* merge the 4 incident module into one

2006-06-11 aurel
* remove money deposit transfer
* ordered is state of future inventory

2006-10-19 aurel
* fix portal type list for getTotalPrice in wf script

2006-10-13 aurel
* added mutilated banknote

2006-10-05 Seb
* Added destruction survey

2006-10-01 Seb
* Added everyting related to cash movement
* Added every module related to currencies

2006-09-20
* fix lettering in workflow

2006-09-11 Seb
* Added internal money deposit
* Added money deposit

2006-08-7 aurel
* fix wf script in foreign cash reception

2006-07-25 aurel
* add usual cash incident module

2006-07-24 aurel
* do more checkions in incident modules' workflow

2006-07-21 aurel
* add cash incident module

2006-07-21 aurel
* fix some view on portal types

2006-07-21 aurel
* add base category for account incident

2006-07-20 aurel
* add account incident workflow

2006-07-20 aurel
* do not get site letter from owner but from source

2006-07-19 aurel
* define 'add portal content' permission on cash sorting workflow

2006-07-19 aurel
* add cash exchange module, made by Tall

2006-07-07 aurel
* fix getBaobabDestination to take the owner of the document inot account instead of the person who is reindexing

2006-07-05 aurel
* fix getBaobabDestination for cash sorting cell

2006-06-17 Seb
* Added Monetary Destruction
* Added Cash Balance Regulation
* Added Counter Rendering
* Added Monetary Recall
* Added Money Deposit Rendering
* Added Usual Cash Rendering
* Added Vault Transfer

2006-06-02 Seb
* add foreign cash reception (made by me)

2006-06-01 aurel
* add money deposit transfer module (made by cisse)

2006-06-01 aurel
* set default security on monetary reception module

2006-05-23 aurel
* add management of coin for monetary reception and issue

2006-05-23 aurel
* add module for monetary issue

2006-05-19 aurel
* add module for monetary reception

2006-05-9 aurel
* add module for monetary survey and classification survey

2006-04-26 aurel