@@ -91,14 +91,6 @@
  <portal_type id="Foreign Cash Reception Module">
   <item>Foreign Cash Reception</item>
  </portal_type>
- <portal_type id="Incident">
-  <item>Outgoing Incident Line</item>
-  <item>Incoming Incident Line</item>
-  <item>Banking Operation Line</item>
- </portal_type>
- <portal_type id="Incident Module">
-  <item>Incident</item>
- </portal_type>
  <portal_type id="Incoming Cash Balance Regulation Line">
   <item>Cash Delivery Cell</item>
  </portal_type>
@@ -116,9 +108,6 @@
   <item>Cash Delivery Cell</item>
  </portal_type>
  <portal_type id="Incoming Classification Survey Line">
-  <item>Cash Delivery Cell</item>
- </portal_type>
- <portal_type id="Incoming Incident Line">
   <item>Cash Delivery Cell</item>
  </portal_type>
  <portal_type id="Incoming Mutilated Banknote Line">
@@ -210,9 +199,6 @@
  </portal_type>
  <portal_type id="Outgoing Classification Survey Line">
   <item>Outgoing Classification Survey Cell</item>
- </portal_type>
- <portal_type id="Outgoing Incident Line">
-  <item>Cash Delivery Cell</item>
  </portal_type>
  <portal_type id="Outgoing Mutilated Banknote Line">
   <item>Cash Delivery Cell</item>
