@@ -13,9 +13,6 @@ Currency Purchase | source_trade
 Currency Sale | currency_exchange_type
 Currency Sale | source_trade
 Foreign Cash Reception | currency_exchange_type
-Incident | currency_exchange_type
-Incident | incident_type
-Incident | site
 Internal Money Deposit | external_software
 Monetary Recall Cell | variation
 Money Deposit | external_software
