@@ -1,3 +1,6 @@
+2006-07-03 aurel
+* remove incident module as it is not enougth specific
+
 2006-06-29 aurel
 * merge the 4 incident module into one
 
